--- a/Desktop/instagram-clone/styles/index.css
+++ b/Desktop/instagram-clone/styles/index.css
@@ -353,5 +353,30 @@ body {
   font-weight: 700;
   margin: 20px 0;
 }
-
 /* END OF SUGGESTION SECTION */
+
+/* MEDIA QUERY BREAKPOINTS*/
+
+@media (max-width: 1100px) {
+  .right-col,
+  .search-box {
+    display: none;
+  }
+
+  .navbar-wrapper,
+  .wrapper {
+    width: 90%;
+  }
+  .wrapper {
+    display: block;
+  }
+}
+
+@media (max-width: 500px) {
+  .nav-items .icon {
+    margin: 0 5px;
+  }
+  .post-image {
+    height: 300px;
+  }
+}
